# styx

./: Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: release.yml
docs/: architecture.md
src/: config.rs  main.rs
src/cli/: complete.rs  db.rs  delete.rs  get.rs  help.rs  list.rs  mod.rs  set.rs  sync.rs
src/store/: engine.rs  mod.rs
src/sync/: backend.rs  manifest.rs  mod.rs
src/util/: format.rs  mod.rs  paths.rs
tests/: integration.rs
