[package]
name = "clio"
version = "1.0.2"
edition = "2021"
description = "A personal key-value store with cross-device S3 sync"
license = "MIT"
repository = "https://github.com/cybersh1t/clio"

[[bin]]
name = "clio"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anstyle = "1"

# Local storage
redb = "2"

# S3 sync
rust-s3 = { version = "0.34", features = ["tokio-rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Hashing
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Paths
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Terminal detection
is-terminal = "0.4"

# Fuzzy matching (for db suggestion on typos)
strsim = "0.11"

# Hostname (for device ID in sync manifest)
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

# musl cross-compilation: native-tls → openssl-sys needs OpenSSL headers,
# but there's no musl-targeted libssl-dev. The "vendored" feature makes
# openssl-sys compile its own OpenSSL from source — no system lib needed.
# cfg-gated to Linux because macOS (Security Framework) and Windows
# (SChannel) don't use OpenSSL at all.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
